err/scatterbytes.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scatterbytes'...
Compiling './lib/python3.5/site-packages/scatterbytes/chunk.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/chunk.py", line 134
    raise ValueError, 'invalid byte range'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/scatterbytes/client'...
Compiling './lib/python3.5/site-packages/scatterbytes/client/chunk.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/client/chunk.py", line 282
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scatterbytes/client/node.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/client/node.py", line 399
    os.makedirs(working_directory, 0700)
                                      ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/scatterbytes/compat'...
Compiling './lib/python3.5/site-packages/scatterbytes/config.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/config.py", line 69
    os.makedirs(config_dir, 0700)
                               ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/scatterbytes/crypt.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/crypt.py", line 59
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scatterbytes/https.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/https.py", line 89
    except socket.error, err: # XXX what error?
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/scatterbytes/storage'...
Compiling './lib/python3.5/site-packages/scatterbytes/storage/node.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/storage/node.py", line 69
    print str(args)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scatterbytes/storage/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/storage/xmlrpc.py", line 106
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/scatterbytes/testing'...
Compiling './lib/python3.5/site-packages/scatterbytes/testing/test_client.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/testing/test_client.py", line 192
    print response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scatterbytes/testing/test_https_common.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/testing/test_https_common.py", line 92
    print 'started server'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scatterbytes/testing/test_m2_http.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/testing/test_m2_http.py", line 66
    print fmt % args
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scatterbytes/testing/test_storagenode.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/testing/test_storagenode.py", line 318
    print chunk_path
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scatterbytes/testing/test_xmlrpc.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/testing/test_xmlrpc.py", line 45
    print client.echo('hello world - %s' % i)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scatterbytes/testing/tls.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/testing/tls.py", line 252
    print path, file_name
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scatterbytes/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/scatterbytes/xmlrpc.py", line 241
    except xmlrpclib.Fault, f:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/scatterbytes-0.8.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
